2002-06-20  Mo DeJong  <supermo@bayarea.net>

	* gui/tclgrepdriver.tcl (line_grep): Fix search for last
	character in buffer as well as bad variable access introduced
	by my last checkin.

2002-06-20  Mo DeJong  <supermo@bayarea.net>

	* gui/tclgrepdriver.tcl (line_grep): Rework line_grep
	method so that it works for buffers that do not end
	with a newline. This lets us get rid of the need to
	append a newline on the end of the buffer and
	making an extra copy of a potentially large buffer.
	* tests/gui/line_grep.test: Add more test cases for
	buffers that do not end with a newline.

2002-06-19  Mo DeJong  <supermo@bayarea.net>

	* gui/tclgrepdriver.tcl (processNextIndex, line_grep):
	Don't use Tcl IO subststem to filter crlf into lf,
	instead handle crlf sequences directly in line_grep.
	* tests/gui/line_grep.test:
	* tests/gui/tclgrepdriver.test: Add test cases for crlf
	EOL style.

2002-06-09  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (print_file, print_dialog): Escape []
	in user input to avoid an error where sn_print_file
	tries to execute the window title as a command. Don't
	regsub the input first since that does not protect
	from bad user input.
	* gui/printdialog.tcl (printit): Escape [] in user input
	to avoid an error where sn_print_file tries to execute
	the window title as a command.
	* gui/tree.tcl (print_it): Ditto.

2002-06-09  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (EditorBindings): Take puts call
	out of Insert binding. Remove <Double-1><ButtonRelease-1>
	binding. This binding did not function in version 5.0
	and it was highlighting in an unexpected way under 5.1.

2002-06-08  Mo DeJong  <supermo@bayarea.net>

	* gui/preferences.tcl (AddInclude): Reorder bindings
	on "Include Directories" text widget so that hitting
	Return in the text widget no longer dismisses the
	project prefs dialog.

2002-06-08  Mo DeJong  <supermo@bayarea.net>

	* etc/english.txt.in: Remove unused Email, Web,